# the-hive

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  AI.md  CLAUDE.md  Dockerfile  README.md  docker-mcp.yaml  pyproject.toml
coordinator/: models.py
coordinator/db/: connection.py  migrate.py
coordinator/db/migrations/: 001_init.sql  002_v2_schema.sql  003_milestones_and_tags.sql  004_projects.sql  005_task_dependencies.sql  006_task_contracts.sql  007_task_evidence_artifacts.sql  008_task_evidence_fk_restrict.sql  009_task_gate_events.sql  010_task_overrides.sql  011_task_status_superseded.sql  012_gate_events_start_gate.sql  013_gate_events_status_transition.sql
coordinator/mcp/: server.py
coordinator/mcp/tools/: clarifications.py  evidence.py  milestones.py  notes.py  projects.py  sections.py  tasks.py
coordinator/web/: app.py
dashboard/: package-lock.json  package.json  vitest.config.ts
dashboard/src/: App.svelte  App.test.ts  test-setup.ts
docs/: VALIDATION_PLAN.md
docs/architecture/: RELIABILITY_EXECUTION_DESIGN.md  TASK_SPEC_SCHEMA.md  V1.1_DEFERRED.md  V1_DESIGN.md  V1_USE_CASES.md
docs/design/: COORDINATOR.md  DASHBOARD.md
docs/research/: V1_PRIOR_ART.md
docs/review/: V1_FINAL_READINESS.md
mockups/: board.html  task-detail.html
scripts/: run-tests.ps1  seed_dashboard_tasks.py  set_contracts.py
tests/: conftest.py  test_db.py  test_mcp_clarifications.py  test_mcp_evidence.py  test_mcp_milestones.py  test_mcp_notes.py  test_mcp_projects.py  test_mcp_sections.py  test_mcp_server.py  test_mcp_tasks.py  test_web_clarifications.py  test_web_milestones.py  test_web_projects.py  test_web_tasks.py
(+8 files in other folders)
