[project]
name = "the-hive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.2",
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["coordinator*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
